--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -17,13 +17,53 @@ div {
     padding: 12px;
   }
 }
-.text {
-  font-size: 3.5rem;
-  background-image: linear-gradient(
-    rgba(109, 217, 228, 1) 0%,
-    rgba(69, 65, 157, 1) 35%,
-    rgba(169, 112, 231, 1) 100%
-  );
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
+
+
+.css-13cymwt-control{
+  background-color: #2A2D35!important;
+  outline: none!important;
+
+}
+.css-13cymwt-control:active{
+  background-color: #2A2D35!important;
+}
+.css-13cymwt-control:focus{
+  background-color: #2A2D35!important;
+}
+/* .css-13cymwt-control:hover{
+  border: 0!important;
+} */
+#react-select-3-listbox{
+  background-color: #2A2D35!important;
+
+}
+#react-select-3-listbox:hover{
+  opacity: 50!important;
+  
+}
+.css-b62m3t-container:active{
+  background-color: #2A2D35!important;
+}
+#selectCoin:active{
+  background-color: #2A2D35!important;
+  
+}
+.css-t3ipsp-control{
+  background-color: #2A2D35!important;
+}
+.css-t3ipsp-control:active{
+  border: 0!important;
+}
+.css-d7l1ni-option{
+  background-color: #31C880!important;
+  color: black!important;
+}
+.css-feonkk-Input2{
+  color: white!important;
+}
+.css-w9q2zk-Input2{
+color: white!important;
+}
+.css-1dimb5e-singleValue{
+  color: white!important;
 }
